More user related changes

--- a/app/assets/stylesheets/_layout/_maincontent.scss
+++ b/app/assets/stylesheets/_layout/_maincontent.scss
@@ -5,6 +5,14 @@ MAIN CONTENT
 
 */
 
+/* Front-End Styles */
+
+.app-content__wrapper {
+  margin: $spacing-l $spacing-m;
+}
+
+
+/* Back-end Styles */
 .site__content {
   margin: 0 0 0 25%;
 }
