--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,5 @@
-%h1 Edit Profile
+= content_for :title, 'Account Settings'
+= content_for :subtitle, "#{current_user.full_name}"
 
 = simple_form_for current_user, url: current_user_path(method: :put, secure: true) do |f|
   = f.input :full_name
