--- a/app/assets/stylesheets/_redbat/_buttons.scss
+++ b/app/assets/stylesheets/_redbat/_buttons.scss
@@ -33,4 +33,16 @@ button, .button {
 }
 
 
+button.toggleNav {
+  background: none;
+  color: $linkColor;
+  padding: 0;
+  outline: 0;
+  border: 0;
+  margin: 0;
+  &:focus, &:hover {
+    color: darken($linkColor, 5%);
+  }
+}
+
 
