Changing animation style on links

--- a/app/assets/stylesheets/_redbat/_type.scss
+++ b/app/assets/stylesheets/_redbat/_type.scss
@@ -164,7 +164,7 @@ LINKS
 
 a {
 	color: $linkColor;
-	@include transition(.2s ease-in-out);
+	@include transition(.2s ease);
 	&:hover {
 		color: darken($linkColor, 10%);
 	}
