Adding image to edit form

--- a/app/assets/stylesheets/_redbat/_forms.scss
+++ b/app/assets/stylesheets/_redbat/_forms.scss
@@ -97,3 +97,14 @@ textarea {
 .button {
   margin-top: $spacing-s;
 }
+
+.section__avatar {
+  img {
+    float: left;
+    margin-right: $spacing-xs;
+  }
+  p {
+    display: inline;
+    vertical-align: middle;
+  }
+}
