Adding registrations, js, and registration forms

--- a/app/assets/stylesheets/_layout/_header.scss
+++ b/app/assets/stylesheets/_layout/_header.scss
@@ -105,7 +105,7 @@ HEADER
     cursor: pointer;
   }
   &:active {
-    @include transform(scale3d(.9, .9, .9));
+    // @include transform(scale3d(.9, .9, .9));
   }
 }
 
