--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -7,7 +7,7 @@
   = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'card_form form-vertical' }) do |f|
     = f.input :name
     = f.input :email
-    / # = f.input :plan_id, as: :select, collection: @plans, include_blank: false
+    = f.input :plan_id, as: :select, collection: @plans, include_blank: false
     = f.input :password
     = f.input :password_confirmation
     - if @user.stripe_token
