--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -50,10 +50,7 @@
                     Members
 
       %main.site__content{ role: 'main' }
-        - flash.each do |key, val|
-          %div{ class: "alert-box #{key}", data: { alert: true } }
-            = val
-            = link_to '&times;'.html_safe, '#', class: 'close'
+        = render 'layouts/flash'
 
         .content__top-bar
           %ul.top-bar__links
