--- a/app/assets/stylesheets/_redbat/_objects.scss
+++ b/app/assets/stylesheets/_redbat/_objects.scss
@@ -18,7 +18,7 @@ OBJECTS
   .close {
     right: 20px;
   }
-  &.alert {
+  &.alert, &.error {
     background-color: $alertColor;
     border: none;
     color: darken($alertColor, 50%);
