--- a/app/views/layouts/_flash.html.haml
+++ b/app/views/layouts/_flash.html.haml
@@ -1,4 +1,4 @@
 - flash.each do |key, val|
-  %div{ data: { alert: true }, class: "alert-box #{key}"}
+  %div{ class: "alert-box #{key}", data: { alert: true } }
     = val
     = link_to '&times;'.html_safe, '#', class: 'close'
