--- a/app/views/layouts/registrations.html.haml
+++ b/app/views/layouts/registrations.html.haml
@@ -15,6 +15,7 @@
       try{Typekit.load();}catch(e){}
 
     = stylesheet_link_tag "application"
+    = javascript_include_tag "vendor/custom.modernizr"
     = csrf_meta_tag
 
   %body.registrations.page__login
