--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,13 +36,13 @@
               %li= link_to 'Member Updates', posts_path
               %li= link_to 'Members', users_path
             %li.has-dropdown
-              = link_to current_user.full_name, '#'
+              = link_to current_user.name, '#'
               %ul.dropdown
                 %li= link_to 'Edit Profile', edit_current_user_path
                 %li= link_to 'Sign Out', destroy_user_session_path, method: :delete
           - else
             %li= link_to 'Login', new_user_session_path
-            %li= link_to 'Sign Up', "#"
+            %li= link_to 'Sign Up', new_user_registration_path
 
     %main.app__content{ role: 'main' }
       - flash.each do |key, val|
