--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,5 +1,5 @@
 = content_for :title, 'Account Settings'
-= content_for :subtitle, "#{current_user.full_name}"
+= content_for :subtitle, "#{current_user.name}"
 
 = simple_form_for current_user, url: current_user_path(method: :put, secure: true) do |f|
   .input
@@ -8,7 +8,7 @@
       = image_tag avatar_url(current_user), height: '75', width: '75', class: 'user__picture'
       %p Avatars are managed through #{link_to 'Gravatar.com', "http://gravatar.com"}.
   %hr/
-  = f.input :full_name
+  = f.input :name
   = f.input :email
 
   %hr/
